# aiandwebservices-next

./: .gitignore  next.config.ts  package-lock.json  package.json  proxy.ts  proxy.ts.backup  tsconfig.json  vercel.json
app/: globals.css  globals.css.backup  layout.jsx  not-found.jsx  page.jsx  robots.ts  sitemap.ts
components/: AllowScroll.jsx  BlogP5.jsx  CTAButton.jsx  CalContactEmbed.jsx  CalInlineEmbed.jsx  CalResultsEmbed.jsx  ChatWidget.jsx  ChecklistForm.jsx  ContactExperience.jsx  ContactForm.jsx  CookieBanner.jsx  CrispChat.jsx  FAQAccordion.jsx  FloatingCTA.jsx  Footer.jsx  Modals.jsx  Nav.jsx  PanelDots.jsx  PanelFadeInit.jsx  PanelsMode.jsx  Schema.jsx  ScrollInit.jsx  ServicePageTemplate.jsx
desktop/: .gitignore  README.md  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: auth.rs  main.rs  menu.rs  notifications.rs  tray.rs
docs/: CHECKLIST_DEPLOYMENT.md  SQUARE_WEBHOOK_AUTOMATION.md  overlay-setup-guide.md  primo-n8n-setup.md
hooks/: useHorizontalScroll.js
lib/: posthog.ts  posts.js  pricing.ts  services-data.ts
mrs-website/: .env.example  CLAUDE.md  netlify.toml  next.config.ts  package-lock.json  package.json
n8n-workflows/: checklist-lead-started.json  checklist-processor-v2.json  square-webhook-processor.json
perf/: baseline-2026-04-22.md  final-2026-04-22.md  lh-mobile-2026-04-22.report.html  lh-mobile-2026-04-22.report.json  lh-mobile-final-2026-04-22.report.html  lh-run1-2026-04-22  (+9 more)
(+717 files in other folders)
